[package]
name = "avatarsay"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
image = "0.24"
viuer = { version = "0.7.1", features = ["sixel"] }
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
anyhow = "1.0.89"
