[package]
name = "avatarsay"
version = "0.1.0"
edition = "2021"
description = "Beautiful quotes from Avatar: The Last Airbender"
homepage = "https://github.com/dotzenith/AvatarSay"
repository = "https://github.com/dotzenith/AvatarSay"
license = "MIT"

[dependencies]
crossterm = "0.28.1"
image = "0.24"
viuer = "0.7.1"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
clap = { version = "4.4.9", features = ["cargo"] }
anyhow = "1.0.89"
textwrap = "0.16.1"
term_size = "0.3.2"
kolorz = "0.10.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dotzenith/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false
