[package]
name = "avatarsay"
version = "0.1.3"
edition = "2024"
description = "Beautiful quotes from Avatar: The Last Airbender"
homepage = "https://github.com/dotzenith/AvatarSay"
repository = "https://github.com/dotzenith/AvatarSay"
license = "MIT"

[dependencies]
crossterm = "0.28.1"
image = "0.24"
viuer = "0.7.1"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
clap = { version = "4.4.9", features = ["cargo"] }
anyhow = "1.0.89"
textwrap = "0.16.1"
term_size = "0.3.2"
kolorz = "0.10.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
